--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 #
 
 *.rej
-*.orig
+:*.orig
 *.a
 *.o
 *~
@@ -56,6 +56,7 @@ cscope.*
 # tags files
 /ctags
 /etags
+/tags
 
 # OneNAND IPL files
 /onenand_ipl/onenand-ipl*
