Check that SPL does not exceed 8k.
Signed-off-by: Alexey Zaytsev <alexey.zaytsev@gmail.com>

--- a/nand_spl/board/n516/Makefile
+++ b/nand_spl/board/n516/Makefile
@@ -43,6 +43,10 @@ ALL	= $(nandobj)u-boot-spl $(nandobj)u-boot-spl.bin $(nandobj)u-boot-spl-16k.bin
 all:	$(obj).depend $(ALL)
 
 $(nandobj)u-boot-spl-16k.bin: $(nandobj)u-boot-spl.bin
+	if [ `wc -c $(nandobj)u-boot-spl.bin | cut -f1 -d " "` -gt 8192 ] ; then \
+		echo "$(nandobj)u-boot-spl.bin is too big!" ;\
+		exit 1 ;\
+	fi
 	dd bs=1024 count=8 if=/dev/zero of=$(nandobj)junk1
 	cat $< $(nandobj)junk1 > $(nandobj)junk2
 	dd bs=1024 count=8 if=$(nandobj)junk2 of=$(nandobj)junk3
